fixed alignment in home.html file

--- a/src/app/shared/home/home.component.css
+++ b/src/app/shared/home/home.component.css
@@ -135,8 +135,8 @@ hr{
         margin-top: 0;
         margin-bottom: 10px;
     }
-    section > h3 {
-        margin: 12px;
+    .forDocs{
+        margin-top: 12px;
     }
 
     .none{
